# newEditServer

./: .gitignore  CMakeLists.txt  Docs_for_add_row_to_server.txt  POSTGRESQL_COMMANDS.md  config.json  gitignore
db/migrations/: flyway.conf
db/migrations/sql/: V1__create_users_table.sql  V2__add_user_fields.sql  V3__create_global_object_registry.sql  V3__create_milling_tool_catalog.sql  V4__add_image_small_url_to_milling_tool_catalog.sql  V4__create_milling_tool_catalog.sql
include/: AppCache.h  StatusController.h  TableInfoCache.h  initConnerction.h  serverUP.h
include/Config/: MinioConfig.h
include/Helpers/: RequestJsonLogger.h
include/Lan/: AuthController.h  GlobalIdService.h  LANControllerForPorgramm.h  RowController.h  RowsSendController.h  ServiceErrors.h  TableDataService.h  TableHandler.h  TableImageSender.h  TableInfoSender.h  TableQueryBuilder.h  TableRepository.h  allTableList.h
include/Lan/CellUpdate/: CellUpdateController.h  CellUpdateErrors.h  CellUpdatePlanner.h  CellUpdateService.h
include/Lan/RowAdd/: RowController.h  RowWritePlanner.h  RowWriteService.h  RowWriteTypes.h
include/Lan/RowDelete/: RowDeleteController.h  RowDeletePlanner.h  RowDeleteService.h  RowDeleteTypes.h  SoftDeletePurger.h  SoftDeletePurgerController.h  SoftDeletePurgerPlugin.h
include/Loger/: Logger.h
include/Storage/: MinioClient.h  MinioPlugin.h
logs/requests/: 2026-01-29T14-18-33.878Z_5508aa27-26bc-4c76-a100-e6fa4de60cdf.json  2026-01-29T14-19-01.091Z_3607118e-61f6-495f-9636-c392186b7a50.json  2026-01-29T14-19-01.261Z_7fb202a0-4a17-40b4-ad05-e0bf0a280a43.json  2026-01-29T14-19-34.434Z_0bbeb719-8961-4b99-bb27-fbae14f9acd3.json
src/: AppCache.cpp  StatusController.cpp  TableInfoCache.cpp  main.cpp  serverUP.cpp
src/Config/: MinioConfig.cpp
src/Helpers/: RequestJsonLogger.cpp
src/Lan/: AuthController.cpp  GlobalIdService.cpp  LANControllerForPorgramm.cpp  RowController.cpp  RowsSendController.cpp  TableDataService.cpp  TableHandler.cpp  TableImageSender.cpp  TableInfoSender.cpp  TableQueryBuilder.cpp  TableRepository.cpp
src/Lan/CellUpdate/: CellUpdateController.cpp  CellUpdatePlanner.cpp  CellUpdateService.cpp
src/Lan/RowAdd/: RowController.cpp  RowWritePlanner.cpp  RowWriteService.cpp
src/Lan/RowDelete/: RowDeleteController.cpp  RowDeletePlanner.cpp  RowDeleteService.cpp  SoftDeletePurger.cpp  SoftDeletePurgerController.cpp  SoftDeletePurgerGuide.txt  SoftDeletePurgerPlugin.cpp
src/Loger/: Logger.cpp
src/Storage/: MinioClient.cpp  MinioPlugin.cpp
uploads/tmp/1F/: 1F1A9FD6-5387-4A67-9DD5-CA76C25674F0
uploads/tmp/3E/: 3EB083BB-6C83-4D41-9656-B354552786CE
uploads/tmp/41/: 417C1F43-F687-4E5B-9B63-61126418AFB3
uploads/tmp/B5/: B55EA64A-63B7-438F-80EA-1D93D12EDF85
uploads/tmp/C2/: C257212F-C63C-4228-A559-FE8C6ABBC662
